--- a/info.html
+++ b/info.html
@@ -64,7 +64,7 @@
           <div class="container fade">
               <div class="text-center">
                   <h2 class="section-heading text-uppercase">Contact Us</h2>
-                  <h3 class="section-subheading">お問い合わせはこちら</h3>
+                  <h3 class="section-subheading contactsub">お問い合わせはこちら</h3>
               </div>
               <form id="contactForm" name="sentMessage" novalidate="novalidate">
                   <div class="row align-items-stretch mb-5">
