--- a/info.html
+++ b/info.html
@@ -98,11 +98,18 @@
       </section>
 
 
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
-      </div>
-    </footer>
+      <footer class="footer text-faded py-5" style="height: 120px;">
+        <div class="container">
+          <div class="container-right">
+            <ul>
+              <p class="sub1">Live&CommunySpace SOUNDSGOOD</p>
+              <p class="sub1">沖縄県那覇市牧志２−17−３ PLAZA21(地下一階)</p>
+              <p class="sub1">Mail:soundsgoodyohena@gmail.com</p>
+              <p class="sub1">TEL:098-894-2121　(担当：饒平名)</p>
+            </ul>
+          </div>
+        </div>
+      </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
