--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Live & ComunitySpace</span>
+    <span class="site-heading-upper text-primary mb-3">Live & CommunitySpace</span>
     <span class="site-heading-lower">SOUNDS GOOD</span>
   </h1>
 
@@ -105,9 +105,16 @@
     </div>
   </section>
 
-  <footer class="footer text-faded text-center py-5">
+  <footer class="footer text-faded py-5" style="height: 120px;">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2020</p>
+      <div class="container-right">
+        <ul>
+          <p class="sub1">Live&CommunySpace SOUNDSGOOD</p>
+          <p class="sub1">沖縄県那覇市牧志２−17−３ PLAZA21(地下一階)</p>
+          <p class="sub1">Mail:soundsgoodyohena@gmail.com</p>
+          <p class="sub1">TEL:098-894-2121　(担当：饒平名)</p>
+        </ul>
+      </div>
     </div>
   </footer>
 
