--- a/event.html
+++ b/event.html
@@ -133,7 +133,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/live6.JPG" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/live6.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">お客様へのレンタルは勿論、お店側主導でのライブも過去多数開催。県内アーティストを集めたイベントやプロのアーティストを招いたライブまで幅広く開催。時には奇抜でアングラなイベントも開催しており、ジャンルに囚われない営業をしている</p>
